# communication-between-the-Unitree-dog-and-its-control-center

./: README.md
cpp_demo/: CMakeLists.txt  control.cpp  readme.md  robot.cpp
py_demo/: control.py  readme.md
py_demo/image/vid_pic_trans/: deploy.md
py_demo/simple_MQTT_test/: readme.md  robot.py
py_demo/vid_pic_trans/: control.py  deploy.md  readme.md  robot.py  test_camera.py  video_and_picture.md
